tests/derive_standard_distribution/derive_fail/enums_must_have_one_nonskipped_variant.stderr
error: There must be at least one non-skipped variant
 --> tests/derive_standard_distribution/derive_fail/enums_must_have_one_nonskipped_variant.rs:4:10
  |
4 | #[derive(StandardDistribution)]
  |          ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `StandardDistribution` (in Nightly builds, run with -Z macro-backtrace for more info)

error: There must be at least one non-skipped variant
  --> tests/derive_standard_distribution/derive_fail/enums_must_have_one_nonskipped_variant.rs:10:10
   |
10 | #[derive(StandardDistribution)]
   |          ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `StandardDistribution` (in Nightly builds, run with -Z macro-backtrace for more info)

error: There must be at least one non-skipped variant
  --> tests/derive_standard_distribution/derive_fail/enums_must_have_one_nonskipped_variant.rs:18:10
   |
18 | #[derive(StandardDistribution)]
   |          ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `StandardDistribution` (in Nightly builds, run with -Z macro-backtrace for more info)

error: There must be at least one non-skipped variant
  --> tests/derive_standard_distribution/derive_fail/enums_must_have_one_nonskipped_variant.rs:24:10
   |
24 | #[derive(StandardDistribution)]
   |          ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `StandardDistribution` (in Nightly builds, run with -Z macro-backtrace for more info)

error: There must be at least one non-skipped variant
  --> tests/derive_standard_distribution/derive_fail/enums_must_have_one_nonskipped_variant.rs:32:10
   |
32 | #[derive(StandardDistribution)]
   |          ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `StandardDistribution` (in Nightly builds, run with -Z macro-backtrace for more info)
